# Hackathon-2_To-Do-App

./: .gitignore  AGENTS.md  AUTH_INTEGRATION_SETUP.md  CLAUDE.md  QWEN.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/betterauth-frontend/: SKILL.md
.claude/skills/mcp-doc-grounding/: README.md  SKILL.md  VALIDATION.md  package_skill.py  package_skill.sh
.claude/skills/python-project-debugger/: SKILL.md
.claude/skills/session-intelligence-harvester/: SKILL.md
.claude/skills/validation-report-updater/: SKILL.md
.qwen/: settings.json
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: README.md  main.py
backend/src/: config.py  main.py
backend/src/database/: migration.py  session.py
backend/src/models/: base.py  task.py  user.py
backend/src/services/: auth_service.py  task_service.py  user_service.py
backend/src/todo/: cli.py  models.py  repository.py
backend/src/todo-phase-1/: services.py
backend/tests/: test_api.py  test_api_endpoints_external.py  test_database.py  test_db_connection_standalone.py
frontend/: CLAUDE.md  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/services/: api-client.ts  (+1 more)
history/adr/: 001-auth-boundaries-separation.md
specs/1-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-todo-phase-2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2.5-auth-alignment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+81 files in other folders)
