[project]
name = "todo-app"
version = "0.1.0"
description = "An in-memory todo console application"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.31",
]

[tool.setuptools.packages.find]
where = ["backend/src"]
